# serverless-booking-api

./: README.md  pyproject.toml  template.yaml
.github/workflows/: ci.yml
src/: requirements.txt
src/app/: api.py  api_handler.py  dal.py  models.py  stream_processor.py
tests/: test_api.py  test_client.py  test_handler.py  test_stream_processor.py
tools/dev/: pre-commit.sh
