[project]
name = "serverless-booking-api"
version = "0.1.0"
description = "Serverless Booking API with AWS SAM, FastAPI, DynamoDB, and Lambda Powertools"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Matt Rust" }]
dependencies = [
  "fastapi>=0.111.0",
  "mangum>=0.17.0",
  "aws-lambda-powertools>=3.2.0",
  "boto3>=1.34.0", # Present in Lambda runtime, pinned for local/dev
  "pydantic>=2.7.0",
  "pytest-sugar>=1.0.0",
  "aws-sam-cli>=1.142.1",
  "httpx>=0.28.1",
  "aws-xray-sdk>=2.14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "bandit>=1.7.9",
  "mypy>=1.10.0",
  "boto3-stubs[events,dynamodb]>=1.34.0",
  "botocore-stubs>=1.34.0",
  "types-requests",
]

# Specifying build system overcomes ModileNotFoundErrors when running tests locally
[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = ["E", "F", "W", "I", "N", "UP", "PL", "RUF", "B", "Q"]
lint.ignore = [
  "E203", # whitespace before ':' (black compat)
]
fix = true
src = ["src", "tests"]
output-format = "pylint"
extend-exclude = [".venv"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = []
mypy_path = ["src"]
namespace_packages = true
explicit_package_bases = true
exclude = ["^tests/"]

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*","mangum", "mangum.*"]
ignore_missing_imports = true

[tool.bandit]
skips = ["B101"] # assert used in tests
